--- a/apps/AdminComposite/Views/Shared/Header/InfoWidgets.cshtml
+++ b/apps/AdminComposite/Views/Shared/Header/InfoWidgets.cshtml
@@ -6,22 +6,22 @@
 		</div>
 
 		<div class="widget text-only increase" id="widget-usercount">
-			<a href="#" class="close-widget" title="Hide Widget" rel="tooltip">x</a> <span>increase</span>
+			<span>increase</span>
 			<p><strong>User Count</strong> +29 Lorem Ipsum</p>
 		</div>
 
 		<div class="widget text-only increase" id="widget-postcount">
-			<a href="#" class="close-widget" title="Hide Widget" rel="tooltip">x</a> <span>increase</span>
+			<span>increase</span>
 			<p><strong>Post Count</strong> +29 Lorem Ipsum</p>
 		</div>
 
 		<div class="widget text-only decrease" id="widget-replycount">
-			<a href="#" class="close-widget" title="Hide Widget" rel="tooltip">x</a> <span>decrease</span>
+			<span>decrease</span>
 			<p><strong>Reply Count</strong> +29 Lorem Ipsum</p>
 		</div>
 
 		<div class="widget text-only increase" id="widget-votecount">
-			<a href="#" class="close-widget" title="Hide Widget" rel="tooltip">x</a> <span>increase</span>
+			<span>increase</span>
 			<p><strong>Vote Count</strong> +29 Lorem Ipsum</p>
 		</div>
 </section>
