--- a/apps/AdminComposite/Views/Shared/LeftRail/SitewideNavigation.cshtml
+++ b/apps/AdminComposite/Views/Shared/LeftRail/SitewideNavigation.cshtml
@@ -28,7 +28,7 @@
 
 		<li class="@forumHeaderClass">
 			<a title="Forums" class="articles">Forum @i</a>
-			<span original-title="There have been 47 new posts in the last 24 hours">47</span>
+			<span original-title="This forum has 47 posts across all categories.">47</span>
 			<ul class="forum-sub-menu">
 				<li @if (forumId.ToString() == selectedForumId && controller == "Forum" && action == "Settings")
 						{
