left align buttons, expand all left nav menus

--- a/apps/AdminComposite/Content/chromatron/css/style.css
+++ b/apps/AdminComposite/Content/chromatron/css/style.css
@@ -1071,6 +1071,7 @@ fieldset {
 	-moz-border-radius:3px;
 	border-radius:3px;
 	padding: 25px 25px 0;
+	margin-bottom: 25px;
 	border:1px solid;
 }
 legend {
