--- a/apps/AdminComposite/Views/Badge/_NewBadge.cshtml
+++ b/apps/AdminComposite/Views/Badge/_NewBadge.cshtml
@@ -20,6 +20,6 @@
 </section>
 
 <section>
-	<input type="button" value="Save" class="button" style="float:right" />
+	<button type="submit">Save</button>
 </section>
 
