--- a/apps/AdminComposite/Views/Category/List.cshtml
+++ b/apps/AdminComposite/Views/Category/List.cshtml
@@ -67,5 +67,5 @@
 		</tbody>
 	</table>
 
-	<a href="#" id="create-category" class="button" style="float: right">New Category</a>
+	<button type="button" id="create-category">New Category</button>
 </article>
