--- a/apps/AdminComposite/Views/Category/_NewCategory.cshtml
+++ b/apps/AdminComposite/Views/Category/_NewCategory.cshtml
@@ -11,7 +11,6 @@
 			<dt><label for="category-description">Description</label></dt>
 			<dd><textarea id="category-name" cols="60" rows="10"></textarea></dd>
 		</dl>
-
-		<input type="button" class="button" value="Save" style="float:right" />
 	</fieldset>
+	<button type="submit">Save</button>
 </section>
