--- a/apps/AdminComposite/Views/Content/ForForum.cshtml
+++ b/apps/AdminComposite/Views/Content/ForForum.cshtml
@@ -65,5 +65,5 @@
 		</tbody>
 	</table>
 
-	<a href="#" id="add-content" class="button" style="float:right">Add Content</a>
+	<button type="submit" id="add-content">Add Content</button>
 </section>
