--- a/apps/AdminComposite/Views/Forum/AuthenticationProviders.cshtml
+++ b/apps/AdminComposite/Views/Forum/AuthenticationProviders.cshtml
@@ -56,6 +56,6 @@
 			<p>
 		</div>
 		
-			<input type="button" class="button" value="Save" style="float: right" />
+		<button type="button">Save</button>
 	</section>
 </article>
