--- a/apps/AdminComposite/Views/Forum/Create.cshtml
+++ b/apps/AdminComposite/Views/Forum/Create.cshtml
@@ -32,7 +32,7 @@
 				@{Html.RenderPartial("_ForumDetails");}
 	 		</fieldset>
 
-			<button type="submit" style="float:right">Create Forum</button>
+			<button type="submit">Create Forum</button>
 		</form>
 	}
 </section>
