--- a/apps/AdminComposite/Views/Theme/List.cshtml
+++ b/apps/AdminComposite/Views/Theme/List.cshtml
@@ -26,6 +26,6 @@
 		</div>
 	</section>
 
-	<a href="#" style="float:right" class="button" id="save-theme">Save</a>
+	<button type="submit" id="save-theme">Save</button>
 </article>
 
