--- a/apps/AdminComposite/Views/VotingScheme/List.cshtml
+++ b/apps/AdminComposite/Views/VotingScheme/List.cshtml
@@ -25,5 +25,5 @@
 			</tr>
 		</tbody>
 	</table>
-	<a href="#" style="float:right" class="button" id="save-voting-scheme">Save</a>
+	<button type="submit" id="save-voting-scheme">Save</button>
 </article>
