--- a/apps/AdminComposite/Content/simplemodal/jquery.simplemodal.1.4.1.css
+++ b/apps/AdminComposite/Content/simplemodal/jquery.simplemodal.1.4.1.css
@@ -14,7 +14,7 @@
 #basic-modal-content {display:none;}
 
 /* Overlay */
-#simplemodal-overlay {background-color:#000; cursor:wait;}
+#simplemodal-overlay {background-color:#000; cursor:default;}
 
 /* Container */
 #simplemodal-container {height:360px; width:600px; background-color:#333; border:4px solid #444; padding:12px;}
