--- a/apps/AdminComposite/Views/Content/NewContent.cshtml
+++ b/apps/AdminComposite/Views/Content/NewContent.cshtml
@@ -32,5 +32,5 @@
 		type specific input mechanism
 	</div>
 
-	<input type="button" class="button" value="Save" style="float:right;margin-top:15px;"/>
+	<button type="submit">Save</button>
 </section>
