--- a/apps/AdminComposite/Views/Shared/_OrganizationUserForm.cshtml
+++ b/apps/AdminComposite/Views/Shared/_OrganizationUserForm.cshtml
@@ -40,4 +40,4 @@
 	}
 </fieldset>
 
-<input type="button" value="@buttonText" class="button" style="float:right"/>
+<button type="submit">@buttonText</button>
