changed oterh settings list to use the same chormatron form style

--- a/apps/AdminComposite/Views/Forum/Create.cshtml
+++ b/apps/AdminComposite/Views/Forum/Create.cshtml
@@ -26,7 +26,7 @@
 </article>
 
 <section id="forum-form-section">
-	@using (Html.BeginFormForInputModel(Model, true, Url.Action("List")))
+	@using (Html.BeginFormForInputModel(Model, true, Url.Action("Details")))
 	{
 		<form action="#">
 			<fieldset>
