line up event style

--- a/apps/AdminComposite/Views/Shared/_ModeratorPanel.cshtml
+++ b/apps/AdminComposite/Views/Shared/_ModeratorPanel.cshtml
@@ -113,6 +113,9 @@
 		</select>
 	</p>
 </section>
+<article>
+<section>
+
 <div>
 	<h3>Latest Activity</h3>
 		<ul class="logs">
@@ -151,3 +154,6 @@
 		}
 	</ul>
 </div>
+</section>
+
+</article>
