clean up theme selection page

--- a/apps/AdminComposite/Views/Theme/List.cshtml
+++ b/apps/AdminComposite/Views/Theme/List.cshtml
@@ -4,29 +4,33 @@
 	</header>
 
 	<section>
-		<label for="theme-selector">Select a theme for this forum.</label>
+		<form action="#">
+			<dl>
+				<dt><label for="theme-selector">Theme</label></dt>
+				<dd>
+						<select id="theme-selector">
+							<option>-- Default Theme --</option>
+							<option value="55555555-5555-5555-5555-555555555555">theme 1</option>
+							<option value="44444444-4444-4444-4444-444444444444">theme 2</option>
+						</select>
+				</dd>
 
-		<select id="theme-selector">
-			<option>-- Default Theme --</option>
-			<option value="55555555-5555-5555-5555-555555555555">theme 1</option>
-			<option value="44444444-4444-4444-4444-444444444444">theme 2</option>
-		</select>
+				<dt><label>Preview</label></dt>
+				<dd>
+					<div style="width:250px;height:200px;border:solid black 1px;background-color:#cccccc;">
+						<span style="font-style: italic;margin-left:80px" id="unselected-preview">
+							<br /><br />
+							<br /><br />
+							<br />
+							preview image
+						</span>
+						<img id="theme-preview" alt="theme-preview" src="#" style="display:none"/>
+					</div>
+				</dd>
+			</dl>
+			<button type="submit" id="save-theme">Save</button>
+		</form>
 	</section>
-	
-
-	<section style="margin-top:15px">
-		<div style="width:250px;height:200px;border:solid black 1px;background-color:#cccccc;">
-			<span style="font-style: italic;margin-left:80px" id="unselected-preview">
-				<br /><br />
-				<br /><br />
-				<br />
-				preview image
-			</span>
-			<img id="theme-preview" alt="theme-preview" src="#" style="display:none"/>
-		</div>
-	</section>
-
-	<button type="submit" id="save-theme">Save</button>
 </article>
 
 
