--- a/apps/AdminComposite/Views/Badge/_NewBadge.cshtml
+++ b/apps/AdminComposite/Views/Badge/_NewBadge.cshtml
@@ -28,8 +28,8 @@
 				<dt><label for="award-value">Value</label></dt>
 				<dd><input type="text" id="award-value" value="type specific input" /></dd>
 
-				<td><label for="badge-description">Description</label></td>
-				<dd><textarea id="badge-description"></textarea></dd>
+				<dt><label for="badge-description">Description</label></dt>
+				<dd><textarea rows="10" cols="55" id="badge-description"></textarea></dd>
 			</dl>
 		</fieldset>
 
