add type specific input to add content screen

--- a/apps/AdminComposite/Views/Badge/List.cshtml
+++ b/apps/AdminComposite/Views/Badge/List.cshtml
@@ -11,7 +11,7 @@
 					autoResize: true,
 					autoPosition: true,
 					position: new Array(25, 250),
-					dataCss: { backgroundColor: "#fff", overflow: "auto",  height: 535, width: 585 },
+					dataCss: { backgroundColor: "#fff", overflow: "hidden",  height: 535, width: 585 },
 					containerCss: { height: 550, width: 600 }
 				});
 
