--- a/apps/AdminComposite/Views/Badge/_NewBadge.cshtml
+++ b/apps/AdminComposite/Views/Badge/_NewBadge.cshtml
@@ -13,7 +13,7 @@
 				<dt><label for="badge-field">Field</label></dt>
 				<dd><input type="text" value="field"/></dd>
 
-				<dt><label for="badge-trigger-operator"></label></dt>
+				<dt><label for="badge-trigger-operator">Operator</label></dt>
 				<dd>
 					<select id="badge-trigger-operator">
 						<option>&gt;</option>
