--- a/apps/AdminComposite/Views/Category/List.cshtml
+++ b/apps/AdminComposite/Views/Category/List.cshtml
@@ -7,7 +7,7 @@
 				autoResize: true,
 				autoPosition: true,
 				position: new Array(25, 300),
-				dataCss: { backgroundColor: "#fff", overflow: "auto", height: 485, width: 635 },
+				dataCss: { backgroundColor: "#fff", overflow: "hidden", height: 485, width: 635 },
 				containerCss: { height: 500, width: 650 }
 			});
 		});
