--- a/apps/AdminComposite/Views/Content/ForForum.cshtml
+++ b/apps/AdminComposite/Views/Content/ForForum.cshtml
@@ -9,7 +9,7 @@
 					autoResize: true,
 					autoPosition: true,
 					position: new Array(25, 300),
-					dataCss: { backgroundColor: "#fff", overflow: "auto",  height: 585, width: 525 },
+					dataCss: { backgroundColor: "#fff", overflow: "hidden",  height: 585, width: 525 },
 					containerCss: { height: 600, width: 540}
 				});
 
