--- a/apps/AdminComposite/Views/Shared/_ForumDetails.cshtml
+++ b/apps/AdminComposite/Views/Shared/_ForumDetails.cshtml
@@ -1,4 +1,5 @@
-﻿@model object
+﻿@using AdminComposite.Models
+@model CreateForumInputModel
 <script type="text/javascript">
 	$(document).ready(function () {
 		$("#forum-name").focus();
@@ -7,22 +8,22 @@
 
 <dl>
 	<dt><label for="forum-name">Name</label></dt>
-	<dd><input type="text" id="forum-name"/></dd>
+	<dd>@Html.TextBoxFor(m => m.Name, new { id = "forum-name" })</dd>
 
 	<dt><label for="forum-slug">Slug</label></dt>
 	<dd>
-		<input type="text" id="forum-slug"/>
+		@Html.TextBoxFor(m=>m.UrlSlug, new {id="forum-slug"})
 		<p><a href="#" id="generate-slug">generate slug</a></p>
 	</dd>
 
 	<dt><label for="forum-host">Host</label></dt>
 	<dd>
-		<input type="text" id="forum-host" value="socialrally.com" readonly="readonly"/>
+		@Html.TextBoxFor(m => m.UrlHostName, new { id = "forum-host", @readonly = "readonly" })
 		<p>Forum url: <b><span id="forum-url">http//socialrally.com/{organization-name}/forums/{forum-name}</span></b></p>
 	</dd>
 
 	<dt><label>Description</label></dt>
 	<dd>
-		<textarea rows="10" cols="65" class="wysiwyg"> </textarea>
+		@Html.TextAreaFor(m => m.Description, new { id = "forum-description", @class = "wysiwyg", @readonly = "readonly" })
 	</dd>
 </dl>
